@@ -8,13 +8,7 @@ apply plugin: 'com.github.johnrengelman.shadow'
 
 def jdk8 = JavaVersion.current() == JavaVersion.VERSION_1_8
 
-def hazelcastJvmArgs = jdk8 ? [] : ["--add-modules", "java.se",
-                                    "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED",
-                                    "--add-opens", "java.base/java.lang=ALL-UNNAMED",
-                                    "--add-opens", "java.base/java.nio=ALL-UNNAMED",
-                                    "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
-                                    "--add-opens", "java.management/sun.management=ALL-UNNAMED",
-                                    "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+def hazelcastJvmArgs = []
 
 def localMainClassName = 'com.hiddenswitch.spellsource.applications.Local'
 
@@ -69,8 +63,6 @@ repositories {
 }
 
 dependencies {
-    compile group: 'com.hazelcast', name: 'hazelcast', version: '3.11'
-    compile group: 'com.hazelcast', name: 'hazelcast-aws', version: '2.3'
     compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
     compile group: 'com.lambdaworks', name: 'scrypt', version: '1.4.0'
     compile group: 'commons-validator', name: 'commons-validator', version: '1.4.1'
@@ -80,10 +72,14 @@ dependencies {
     compile group: 'io.vertx', name: 'vertx-service-discovery', version: '3.8.0'
     compile group: 'io.vertx', name: 'vertx-web', version: '3.8.0'
     compile group: 'io.vertx', name: 'vertx-auth-common', version: '3.8.0'
-    compile group: 'io.vertx', name: 'vertx-hazelcast', version: '3.8.0'
     compile group: 'io.vertx', name: 'vertx-rx-java2', version: '3.8.0'
     compile group: 'io.vertx', name: 'vertx-mail-client', version: '3.8.0'
     compile group: 'io.vertx', name: 'vertx-dropwizard-metrics', version: '3.8.0'
+    compile 'io.netty:netty-transport-native-epoll:4.1.15.Final:linux-x86_64'
+    compile 'io.netty:netty-transport-native-kqueue:4.1.15.Final:osx-x86_64'
+    compile 'io.atomix:atomix:3.1.5'
+    compile 'io.atomix:atomix-raft:3.1.5'
+    compile 'io.atomix:atomix-primary-backup:3.1.5'
     compile group: 'javax.cache', name: 'cache-api', version: '1.1.1'
     compile group: 'net.sf.py4j', name: 'py4j', version: '0.10.8.1'
     compile group: 'ca.pjer', name: 'logback-awslogs-appender', version: '1.0.0'
@@ -95,7 +91,7 @@ dependencies {
 
     testCompile project(':testutils')
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile 'io.vertx:vertx-core:3.6.0:tests'
+    testCompile 'io.vertx:vertx-core:3.8.0:tests'
     testCompile 'org.powermock:powermock-module-junit4:2.0.2'
     testCompile 'org.powermock:powermock-api-mockito2:2.0.2'
     testCompile group: 'io.vertx', name: 'vertx-unit', version: '3.8.0'
